[gd_scene load_steps=2 format=3 uid="uid://bnfqd0l5j6hjy"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_j1osr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_j1osr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RoundLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Round: 1"

[node name="DiceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dice:
"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="RollButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Roll!"

[node name="EndRollButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "End Round
"

[connection signal="pressed" from="VBoxContainer/RollButton" to="GameManager" method="_on_roll_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndRollButton" to="GameManager" method="_on_end_button_pressed"]
